--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         src: url(fontsandpics/ofont.ru_Raydis.ttf);
     }
     body {
+        overflow: hidden;
         background-color: #696969;
         font-family: Bin;
         color: white;
@@ -41,7 +42,8 @@
 
 <div id="timer"></div>
 <div id="message"></div>
-<div><p id="text">Самой чудесной девушке в мире — с днём рождения! 🎉 Твоя улыбка освещает мир ярче солнца, а доброта согревает сердца всех вокруг.<br>Желаю тебе океан счастья, горы любви и реку вдохновения на каждый день.<br>Помни, я всегда рядом, чтобы дарить тебе поддержку и любовь.<br>Пусть этот год станет началом самых ярких приключений и невероятных достижений.<br>Люблю и обнимаю крепко! 😘✨</p></div>
+<br>
+<div id="text"></div>
 
 <script>
 // Установка целевой даты для обратного отсчёта
@@ -71,6 +73,7 @@ const x = setInterval(function() {
     clearInterval(x);
     document.getElementById("timer").innerHTML = "";
     document.getElementById("message").innerHTML = "✨🎆🎇 С днём рождения любимая 😘 ✨🎆🎇";
+    document.getElementById("text").innerHTML = "Самой чудесной девушке в мире — с днём рождения! 🎉 Твоя улыбка освещает мир ярче солнца, а доброта согревает сердца всех вокруг.<br>Желаю тебе океан счастья, горы любви и реку вдохновения на каждый день.<br>Помни, я всегда рядом, чтобы дарить тебе поддержку и любовь.<br>Пусть этот год станет началом самых ярких приключений и невероятных достижений.<br>Люблю и обнимаю крепко! 😘✨";
   }
 }, 1000);
 </script>
